--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "music-bot",
-  "module": "index.ts",
+  "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "start": "bun run ."
+  },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/bun": "latest",
